# glyphs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: .env  file-filters.yml
.github/workflows/: build-rust-client.yml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/bench/: _setup.ts  excavate.ts
clients/js/scripts/: .env.example  create-collection.ts  hunt-rare.ts
clients/js/src/: index.ts  plugin.ts
clients/js/test/: _setup.ts  excavate.test.ts  getProgram.test.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi.cjs  shank.cjs  validator.cjs
idls/: bgl_glyphs_program.json
programs/bgl-glyphs/: Cargo.toml  README.md
programs/bgl-glyphs/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
