[package]
name = "bgl-glyphs-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "0.4.2"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "< 1.18"
thiserror = "^1.0"
mpl-core = "0.5.0"
mpl-utils = "0.3.4"
bytemuck = "1.15.0"
power-of-two = "0.1.0"
strum_macros = "0.26.2"
