[package]
name = "bgl-glyphs-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = "0.4.6"
num-derive = "^0.4"
num-traits = "^0.2"
solana-program = "2.3"
thiserror = "^1.0"
mpl-core = "0.11.1"
mpl-utils = "0.4"
bytemuck = "1.24.0"
power-of-two = "0.1.0"
strum_macros = "0.27"
